# stockwatch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_jobs.py  stockwatchctl  streamlit_app.py
data/: bootstrap_corporate_actions.csv  bootstrap_dividends.csv  bootstrap_symbols.csv  watchlist_rules.example.json
deploy/systemd/: stockwatch-admin.local.service  stockwatch-admin.service  stockwatch-all-in-one.local.service  stockwatch-all-in-one.service  stockwatch-ops.local.service  stockwatch-ops.service
docs/: operations-manual.md  telegram-alert-engine.md
stocklab/bot/: commands.py
stocklab/collectors/: events.py  ksei.py  liquidity.py  symbols.py
stocklab/config/: __init__.py  settings.py
stocklab/jobs/: alerts.py  bootstrap.py  runner.py  scheduler.py
stocklab/notifiers/: __init__.py  formatter.py  telegram.py
stocklab/parsers/: __init__.py
stocklab/signals/: __init__.py  dividend.py  summary.py  watchlist.py
stocklab/storage/: __init__.py  db.py  repository.py  schema.sql
stocklab/utils/: dates.py
stockwatch/bot/: commands.py
stockwatch/collectors/: events.py  ksei.py  ksei_publications.py  market.py  symbols.py
stockwatch/config/: __init__.py  settings.py
stockwatch/jobs/: __init__.py  alerts.py  bootstrap.py  runner.py  scheduler.py
stockwatch/notifiers/: telegram.py
stockwatch/parsers/: events.py
stockwatch/signals/: dividend.py  summary.py  unusual.py  watchlist.py
stockwatch/storage/: __init__.py  db.py  repository.py
stockwatch/utils/: retry.py  watchlist_rules.py
